outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-28_00-20-56/evaluations/problem_eval8922820575495960645_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of immediate distance and lookahead based on the remaining unvisited nodes, using a decay factor to prioritize short-term optimization early in the search and long-term optimization as more nodes are visited, while incorporating a probabilistic selection to escape local optima.}
                                                                                                                                                                                                                                                                                                     ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of immediate distance and lookahead based on the remaining unvisited nodes, using a decay factor to prioritize short-term optimization early in the search and long-term optimization as more nodes are visited, while incorporating a probabilistic selection to escape local optima.}
                                                                                                                                                                                                                                                                                                     ^
SyntaxError: unmatched '}'
